# ENG_AirFlow-Faker-Docker

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dags/: dag_etl.py
sql/: extract_client_email_marketing.sql  extract_cliente_ativo.sql  extract_qtd_cliente_email_marketing.sql
